examples/test/testpolicy7721.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7721
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key11: value44
      key7: value6
      key9: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value14
      podSelector:
        matchLabels:
          key35: value7
          key37: value10
          key45: value2
